base/src/test/resources/failure/patterns/selection-failure.aya.txt
In file $FILE:8:6 ->

  6 |  | A, suc m => vcons A (Vect A m)
  7 | def mapImpl {A B : Type} {n : Nat} (f : Pi A -> B) (xs : Vect A n) : Vect B n
  8 |  | f, vnil => vnil
            ^--^

Warning: Cannot match with
           vnil
         due to a failed index unification, treating as bind pattern

In file $FILE:8:14 ->

  6 |  | A, suc m => vcons A (Vect A m)
  7 | def mapImpl {A B : Type} {n : Nat} (f : Pi A -> B) (xs : Vect A n) : Vect B n
  8 |  | f, vnil => vnil
                    ^--^

Error: Cannot check the expression of type
         Vect A n
         (Normalized: Vect A n)
       against the type
         Vect B n
         (Normalized: Vect B n)

In file $FILE:9:6 ->

  7 | def mapImpl {A B : Type} {n : Nat} (f : Pi A -> B) (xs : Vect A n) : Vect B n
  8 |  | f, vnil => vnil
  9 |  | f, vcons x xs => _
            ^--------^

Error: Cannot match with
         vcons x xs
       due to a failed index unification

In file $FILE:9:6 ->

  7 | def mapImpl {A B : Type} {n : Nat} (f : Pi A -> B) (xs : Vect A n) : Vect B n
  8 |  | f, vnil => vnil
  9 |  | f, vcons x xs => _
            ^--------^

Error: Unknown constructor
         vcons x xs

3 error(s), 1 warning(s).
What are you doing?
